@@ -47,6 +47,7 @@ public:
     ucs4char* currentToken() const;
 
 private:
+
     bool eofP_;
     ucs4char dummy_;
     ucs4char* buffer_;
